--- a/src/App.css
+++ b/src/App.css
@@ -68,3 +68,43 @@ a {
   border-top: 1px solid #d35585;
   border-bottom: 1px solid #d35585;
 }
+
+#rect-top {
+  width: 600px;
+  height: 150px;
+  margin: auto;
+  margin-bottom: 20px;
+  transform: translate(-100px, 20px);
+  border: 1px solid #b16957;
+  filter: saturate(0%);
+  filter: hue-rotate(0);
+  animation: anim 5s infinite;
+}
+
+#rect-bottom {
+  width: 600px;
+  height: 150px;
+  margin: auto;
+  margin-bottom: 20px;
+  transform: translate(50px, -90px);
+  border: 1px solid #b16957;
+  filter: saturate(0%);
+  filter: hue-rotate(0);
+  animation: anim 5s infinite;
+}
+#rect-bottom h2 {
+  margin-left: 10px;
+  margin-top: -15px;
+  background: linear-gradient(-45deg, #d35585, #91898c);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+#rect-bottom p {
+  margin-left: 10px;
+  background: linear-gradient(-45deg, #d35585, #91898c);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
