--- a/src/App.css
+++ b/src/App.css
@@ -175,4 +175,21 @@ a {
   align-content: center;
   width: 33%;
   align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  text-align: justify;
+  margin: 10px;
+  padding: 10px;
+}
+.projects-container div strong {
+  margin: 5px;
+  padding: 5px;
+}
+.projects-container div p {
+  margin: 5px;
+  padding: 5px;
+}
+
+.projects-container div img {
+  width: 70%;
 }
