--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,99 @@
-nav ul {
+a {
+  color: rgba(0, 0, 0, 0.7);
+  text-decoration: none;
+}
+
+.nav-bar {
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 2;
+}
+#menu-button {
+  position: fixed;
+  opacity: 0.5;
+  z-index: 2;
+  top: 0px;
+  left: 0px;
+}
+.nav-bar nav {
+  position: fixed;
+  background: rgba(200, 200, 200, 0.3);
+  height: 100vh;
+  left: -100%;
+  transition: 0.4s ease-in-out;
+}
+
+.nav-bar nav ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 50px 20px;
+  text-align: justify;
+}
+.nav-bar nav ul li {
+  margin: 15px 0;
+}
+
+#navbar-show {
+  left: 0;
+}
+#landing-content {
+  display: flex;
+  flex-direction: column;
+}
+#landing-content p {
+  margin: 10px;
+  width: 90%;
+  text-align: justify;
+  filter: hue-rotate(0);
+  animation: anim 10s infinite;
+  background: linear-gradient(-45deg, #d35585, #b16957, #2098c4);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+#landing-content img {
+  width: 100%;
+  height: 100%;
+  margin: 4px 0;
+  filter: saturate(0%);
+  filter: hue-rotate(0);
+  animation: anim 10s infinite;
+}
+@keyframes anim {
+  50% {
+    filter: saturate(100%);
+    filter: hue-rotate(360deg);
+  }
+  100% {
+    filter: saturate(50%);
+    filter: hue-rotate(0);
+  }
+}
+.item-1 {
+  animation-name: anim-1;
+}
+
+.item-2 {
+  animation-name: anim-2;
+}
+
+.item-3 {
+  animation-name: anim-3;
+}
+.logo-container {
+  margin: auto;
+  padding: 1px;
+  font-size: 16px;
+  width: 60%;
+  transition: 1s;
+  text-align: center;
+  margin-bottom: 5px;
+  color: darkgrey;
+}
+
+/* nav ul {
   list-style: none;
 
   display: flex;
@@ -238,4 +333,4 @@ nav ul li a:hover {
   100% {
     opacity: 0;
   }
-}
+} */
