--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,9 @@ a {
   z-index: 2;
   top: 0px;
   left: 0px;
+  background: none;
+  border: none;
+  outline: none;
 }
 .nav-bar nav {
   position: fixed;
@@ -179,6 +182,23 @@ a {
 #mystack {
   text-align: center;
   margin: 50px;
+}
+.contact-icons {
+  display: flex;
+}
+.contact-icons div {
+  width: 33%;
+  display: flex;
+  align-items: center;
+  margin: auto;
+}
+.contact-icons div a {
+  display: flex;
+  width: 100%;
+}
+.contact-icons img {
+  width: 60%;
+  margin: 20px auto;
 }
 /* nav ul {
   list-style: none;
