--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,7 @@ a {
 }
 .nav-bar nav {
   position: fixed;
-  background: rgba(200, 200, 200, 0.3);
+  background: rgba(200, 200, 200, 0.7);
   height: 100vh;
   left: -100%;
   transition: 0.4s ease-in-out;
@@ -198,6 +198,7 @@ a {
 }
 .contact-icons img {
   width: 60%;
+  height: 100%;
   margin: 20px auto;
 }
 /* nav ul {
